Major update to index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,35 @@
   <h2>Kevin M. B. Cook</h2>
    <img src="img/kevin.jpg">
 <p>
-Hi and welcome to my home page, which shares my view on teaching. 
+Hi and welcome to my home page, which shares my view on learning and teaching. 
 <p>
-What should be taught? Should we teach that which is good, or evil, or perhaps both? Should we teach what is popular, or what is right? Should we teach what will bring approval and job security to us? As teachers let us be united in a determination to teach that which is good, that which benefits those we teach and the world as a whole. 
+I enjoy learning that which helps me to be a better person. I am trying to become a better person, less selfish, more understanding, happier, and more useful. Ultimately I am trying to become like the Savior Jesus Christ, our perfect exemplar. 
 <p>
-Below is a collection of my teaching, my effort to influence the world for good. 
+There are many who would educate me, help me to improve. Who will be my teachers? Who will I follow and learn from? Where will they lead me? What will they teach me? When I was young, my teachers were chosen for me. I am indebted to my parents and others who chose well. As I grew older, I took more responsibility for choosing my teachers. One of the most important things I am learning is to be responsible for choosing whom I will follow. As I learn this principle, I feel a desire to share it with others. 
+<p>
+After finishing my undergraduate degree I worked for many years in my own small business repairing computer monitors. The work was very challenging, and I enjoyed it. I gained valuable experience solving problems. Eventually, I was inspired to return to school for a graduate degree and to pursue a career in education.   
+<p>
+I enjoyed going back to school greatly. There was so much for me to learn from my professors, fellow students, and others around the world. I was invigorated by the challenge of expanding the bounds of human understanding.
+<p>
+In the course of my studies, I was surprised to find that some of what was considered expanding the bounds of human understanding was actually just the opposite. I found that the field of mathematics particularly was riddled with a cancer-like growth in confusion.
+<p>
+Mathematics is field of study driven by logical reasoning. Logic can be a powerful tool for discovering new knowledge. Yet it is an extremely brittle tool, easily broken. The nature of logic is such that one small error may ruin a great system of assumption and conclusion. 
+<p>
+A logical implication might be considered new knowledge, such as if P then Q. Assuming that both P and the implication are true then we conclude that Q is also true. Such knowledge may be useful if we want to know if Q is true and Q is difficult to observe, but P is easy to observe. Applying this new knowledge and observing that P is true, we learn that Q is also true. 
+<p>
+On the other hand, a logical implication may be technically correct yet totally worthless. Consider the implication above, if P then Q. If P is not true then the implication does not help us conclude anything about Q. In this sense, the implication is of no value.
+<p>
+A particularly confusing aspect of logic is contradiction. A contradiction is something that is not true by definition, such as P and not P. The implication if P and if not P then Q is always technically correct, no matter what Q represents. In other words, assuming a contradiction it is possible to conclude anything. From a perverse point of view, assuming a contradiction opens up a new world of knowledge.  
+<p>
+It can be difficult to avoid contradiction, to ensure logical consistency. Since a contradiction is essentially a lie, calling a statement contradictory can be seen as accusatory. And, many statements which appear contradictory actually are not. 
+<p>
+Clearly defined terminology can help to avoid logical inconsistency, confusion, and misunderstanding. Not everyone is interested in clearing up confusion. Some may feel they benefit from confusion. Some may feel it would be too difficult clear up. Some may not see what is confusing. One famous example of what is confusing is taught to children in elementary schools, that 0.999... equals one. I have written an article entitled "Does 0.999... equal one?", in an attempt to more clearly define terminology, in an attempt to avoid logical inconsistency and the confusion it fuels. Clearly defined terminology helps people, students and teachers alike, to better understand one another. 
+<p>
+When teachers persist in promoting confusion, wittingly or not, what should students do? Students can subject themselves to the dogma of the day, however harmful, or they can choose what to accept and what to reject. How will they choose wisely when they are less educated than their teachers?
+<p>
+My faith teaches me that we all need the Spirit of God to help us see clearly, to enlighten our understanding. Reason alone is not sufficient. Relying on respected members of society is not sufficient, and neither is following the crowd. 
+<p>
+Below is a link to the above mentioned article along with some of my other writings.  
 <p>
 <p><a href="point-nine-repeating.html">Does 0.999... equal one?</a>
 <p>A proof of the inconsistency of ZFC [<a href="doc/not-zfc.pdf">pdf</a>]
@@ -25,7 +49,7 @@ Below is a collection of my teaching, my effort to influence the world for good.
 My gmail address is kevincook13.
 
 <p>
-<small>Last revised 3 January 2019</small>
+<small>Last revised 2 March 2019</small>
 <p>
 <small>Copyright &copy; 2019 Kevin Cook</small>
 </body>
