--- a/index.html
+++ b/index.html
@@ -10,21 +10,25 @@ I enjoy learning that which helps me to be a better person. I am trying to becom
 <p>
 There are many who would educate me, help me to improve. Who will be my teachers? Who will I follow and learn from? Where will they lead me? What will they teach me? When I was young, my teachers were chosen for me. I am indebted to my parents and others who chose well. As I grew older, I took more responsibility for choosing my teachers. One of the most important things I am learning is to be responsible for choosing whom I will follow. As I learn this principle, I feel a desire to share it with others. 
 <p>
+Through my own experience I have learned there are some who would educate me to further their own agenda, regardless of how damaging that agenda may be to others, including me. 
+<p>
+Also through my experience I have learn to rely upon the Lord for help to discern between truth and error.
+<p>
 After finishing my undergraduate degree I worked for many years in my own small business repairing computer monitors. The work was very challenging, and I enjoyed it. I gained valuable experience solving problems. Eventually, I was inspired to return to school for a graduate degree and to pursue a career in education.   
 <p>
 I enjoyed going back to school greatly. There was so much for me to learn from my professors, fellow students, and others around the world. I was invigorated by the challenge of expanding the bounds of human understanding.
 <p>
 In the course of my studies, I was surprised to find that some of what was considered expanding the bounds of human understanding was actually just the opposite. I found that the field of mathematics particularly was riddled with a cancer-like growth in confusion.
 <p>
-Mathematics is field of study driven by logical reasoning. Logic can be a powerful tool for discovering new knowledge. Yet it is an extremely brittle tool, easily broken. The nature of logic is such that one small error may ruin a great system of assumption and conclusion. 
+Mathematics is a field of study driven by logical reasoning. Logic can be a powerful tool for discovering new knowledge. Yet it is an extremely brittle tool, easily broken. The nature of logic is such that one small error may ruin a great system of assumption and conclusion. 
 <p>
 A logical implication might be considered new knowledge, such as if P then Q. Assuming that both P and the implication are true then we conclude that Q is also true. Such knowledge may be useful if we want to know if Q is true and Q is difficult to observe, but P is easy to observe. Applying this new knowledge and observing that P is true, we learn that Q is also true. 
 <p>
 On the other hand, a logical implication may be technically correct yet totally worthless. Consider the implication above, if P then Q. If P is not true then the implication does not help us conclude anything about Q. In this sense, the implication is of no value.
 <p>
-A particularly confusing aspect of logic is contradiction. A contradiction is something that is not true by definition, such as P and not P. The implication if P and if not P then Q is always technically correct, no matter what Q represents. In other words, assuming a contradiction it is possible to conclude anything. From a perverse point of view, assuming a contradiction opens up a new world of knowledge.  
+A particularly confusing aspect of logic is contradiction. A contradiction is something that is not true by definition, such as P and not P. The implication if P and if not P then Q is always technically correct, no matter what Q represents. In other words, assuming a contradiction it is possible to conclude anything. From a perverse point of view, assuming a contradiction opens up a new world of knowledge. Such new worlds of knowledge are like cancer. They grow and consume valuable resources, yet do not give. Such cancer-like growth damages society as a whole. 
 <p>
-It can be difficult to avoid contradiction, to ensure logical consistency. Since a contradiction is essentially a lie, calling a statement contradictory can be seen as accusatory. And, many statements which appear contradictory actually are not. 
+While in graduate school pursuing a PhD I witnessed powerful forces at work to hide the truth about logical inconsistency in mathematics. I did my best to address the problem, but was rebuffed. On November 15th 2016, as a doctoral candidate in computer science at Brigham Young University in Provo Utah, I was suddenly and quietly dropped from my program of study because I refused to commit to not talk with math professors about logical inconsistency I saw in the foundations of modern mathematics.
 <p>
 Clearly defined terminology can help to avoid logical inconsistency, confusion, and misunderstanding. Not everyone is interested in clearing up confusion. Some may feel they benefit from confusion. Some may feel it would be too difficult clear up. Some may not see what is confusing. One famous example of what is confusing is taught to children in elementary schools, that 0.999... equals one. I have written an article entitled "Does 0.999... equal one?", in an attempt to more clearly define terminology, in an attempt to avoid logical inconsistency and the confusion it fuels. Clearly defined terminology helps people, students and teachers alike, to better understand one another. 
 <p>
