Revise main article.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ There are many who would educate me, help me to improve. Who will be my teachers
 <p>
 Through my own experience I have learned there are some who would educate me to further their own agenda, regardless of how damaging that agenda may be to others, including me. 
 <p>
-Also through my experience I have learn to rely upon the Lord for help to discern between truth and error.
+Also through my experience I have learned to rely upon the Lord for help to discern between truth and error.
 <p>
 After finishing my undergraduate degree I worked for many years in my own small business repairing computer monitors. The work was very challenging, and I enjoyed it. I gained valuable experience solving problems. Eventually, I was inspired to return to school for a graduate degree and to pursue a career in education.   
 <p>
