Revise main article.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Clearly defined terminology can help to avoid logical inconsistency, confusion, 
 <p>
 When teachers persist in promoting confusion, wittingly or not, what should students do? Students can subject themselves to the dogma of the day, however harmful, or they can choose what to accept and what to reject. How will they choose wisely when they are less educated than their teachers?
 <p>
-My faith teaches me that we all need the Spirit of God to help us see clearly, to enlighten our understanding. Reason alone is not sufficient. Relying on respected members of society is not sufficient, and neither is following the crowd. 
+My faith teaches me that we all need the Spirit of God to help us see clearly, to enlighten our understanding. Reason alone is not sufficient, relying on respected members of society is not sufficient, and neither is following the crowd. 
 <p>
 Below is a link to the above mentioned article along with some of my other writings.  
 <p>
