Add detail to Adventures

--- a/adventure.html
+++ b/adventure.html
@@ -7,7 +7,7 @@
 Welcome to the story of my adventures in graduate school. I was a doctoral student in computer science at Brigham Young University in Provo Utah.
 
 <p>
-On Thursday June 4th 2015 at about 11am while running multiple experiments simulating a team of UAVs tracking a ground target, my experiments all crashed together, and I soon realized that I could no longer log in to my computer. 
+On Thursday June 4th 2015 at about 11am while running multiple experiments simulating a team of UAVs (drones) tracking a ground target, my experiments all crashed together, and I soon realized that I could no longer log in to my computer. 
 
 <p>
 Shortly thereafter, I received a phone call from my advisor stating that the chair of the department wanted to speak with me. I was in deep trouble.
@@ -19,7 +19,51 @@ Normally, our department was very supportive of its students. And it was of me u
 Yes, I had done so. In fact, I had asked many professors of mathematics to do that same thing. This was my crime, asking professors to listen to what I had to say and to tell me what they thought about it. One month earlier my advisor had told me that I must stop, and I had told him that I would not. 
 
 <p>
-I never did regain access to my computer, or the cluster of computers in the lab of which it was a part. It was a very useful cluster. Also, I felt a connection to it since I had helped to bring in money to fund it, and had participated in its design and assembly. I missed my computer, but not only that. 
+It was not easy for me to refuse to comply with my advisor's demand. I did so for deeply personal reasons. 
+
+<p>
+His demand was not the first such demand. On April 15th I had received an unsettling email from someone I had not contacted who essentially demanded that I stop contacting math professors. He wrote:
+
+<blockquote>
+"Please consider carefully the following bit of personal advice.   There are two possibilities.
+
+<p>
+(1) Your proof is wrong,  or (2) Your proof is right.   If your proof is right,  you'll be famous and successful.   If your proof is wrong,  you will be embarrassed and you will have difficulty getting a job. If your proof is right,  you have plenty of time and the stated results are inevitable when your proof is recognized.  If your proof is wrong,  the fewer people know about it the better. For example, many people have embarrassed themselves by prematurely making public their wrong proofs of P != NP or P=NP.  I can remember the names of some of them,  perhaps you can also.   Many others have also had wrong proofs of P != NP but had the good sense to show them only to one other person, or to zero other persons.  Luckily for them,  nobody knows how many of them there are.
+
+<p>
+It is very easy to make mistakes in mathematics.  I will not try to convince you that you have made mathematical mistakes--that should be the job of your professors.  You should not have made your proof public without convincing your Ph. D. advisor of its correctness.  For the sake of your future career,  you should now cease sending out your proof,  remove it from any public website, and discuss the proof with one professor until either you see that it is wrong or you convince the professor it is right."
+</blockquote>
+
+<p>
+I wrote back later that day:
+
+<blockquote>
+"Thank you for the very thoughtful email. I will carefully consider it carefully. Up to this point, I have chosen a different strategy.
+
+<p>
+I don't think it would be a great embarrassment to me if someone identified a flaw in my arguments. Isn't that what academics is all about, learning? Or is the purpose of academic research to build a reputation?
+
+<p>
+From the point of view of learning, the more people who consider my arguments the better. If the arguments are correct, then people will learn. If they are not correct, then people will learn why. 
+
+<p>
+If my arguments are not correct, the more people who look at my paper, the higher the likelihood that someone will identify a flaw. I am willing for people to know that I make mistakes. I am also willing for people to know that I wrote the paper.
+
+<p>
+If my arguments are correct, then people will want to know sooner rather than later. If I have not made a mistake, then others have made mistakes. But isn't that OK as long as we learn from them?"
+</blockquote>
+
+<p>
+The proof referred to in the above email is <a href="doc/not-zfc.pdf">A proof of the inconsistency of ZFC</a>. On March 2nd I had submitted the paper to Philip Welch, for potential publication in the Journal of Symbolic Logic.   
+
+<p>
+Conversations with several leading authorities in mathematics had not convinced me of any substantive error in my paper, but did help me better understand prevailing thought and attitudes.
+
+<p>
+I remained true to my personal convictions, at a cost. If at some future time my sacrifice proves fruitful, I will be grateful. At present, I will be patient. I take solace knowing that I was true to myself, and to my God. 
+
+<p>
+I never did regain access to my computer, or to the cluster of computers in the lab of which it was a part. It was a very useful cluster. Also, I felt a connection to it since I had helped to bring in money to fund it, and had participated in its design and assembly. I missed my computer, but not only that. 
 
 <p>
 What was worse than not being able to use my computer was not being able to sit at my desk in the lab where I had close contact with my advisor.  
@@ -31,8 +75,12 @@ I continued to work towards completing my degree. My advisor continued to work w
 Eventually my advisor stopped working with me. On November 1st 2016 I sent him a draft of a paper I had been working on for about a year. He read it and four days later sent me an email saying that I had done good work, which I was very excited to hear. He mentioned a few minor problems, and said that he would give me more feedback. I never heard from him about the paper again. After losing the support of my advisor, progress towards completing my degree was halted.
 
 <p>
-<small>Last revised 4 January 2018</small>
+I later learned that I had been dropped from my program of study on November 15th (2016), because I had refused to commit to not talk with math professors.
+
+
 <p>
-<small>Copyright &copy; 2018 Kevin Cook</small>
+<small>Last revised 8 October 2019</small>
+<p>
+<small>Copyright &copy; 2019 Kevin Cook</small>
 </body>
 </html> 
