--- a/index.html
+++ b/index.html
@@ -53,8 +53,12 @@ Below is a link to the above mentioned article along with some of my other writi
 My gmail address is kevincook13.
 
 <p>
-<small>Last revised 8 October 2019</small>
+<small>This page last revised 8 October 2019</small>
+
 <p>
-<small>Copyright &copy; 2019 Kevin Cook</small>
+<small>Site last revised 25 January 2020</small>
+
+<p>
+<small>Copyright &copy; 2020 Kevin Cook</small>
 </body>
 </html> 
