Expand Class section

--- a/point-nine-repeating.html
+++ b/point-nine-repeating.html
@@ -37,7 +37,7 @@ There is no limit to the number of sequences belonging to this class. Therefore 
 The meaning of a description can change depending on whether the description refers to individuals separately or collectively. Consider the description: "a single sequence, of length one or two nines". What does this description, or class, refer to? Which sequences are members of this class? The answer depends upon whether the description refers to sequences separately or collectively. If the description refers to sequences separately, then both 9 and 99 are members of the class, since both sequences satisfy the description. However, if the description refers to sequences collectively then either 9 or 99 are members of the class, but not both, since the description specifies that the collection contains a single sequence.
 
 <p>
-Using the term "all" to refer to members of any class with unlimited membership necessarily must refer to members separately, not collectively. Using the term "any" clarifies that members are referred to separately. For example, "any sequence belonging to the class" refers to members separately. 
+Using the term "all" to refer to members of any class with unlimited membership necessarily must refer to members separately, not collectively. Using the term "every" clarifies that members are referred to separately. For example, "every sequence belonging to the class" refers to members separately. 
 
 <h3>Limit</h3>
 <p>
@@ -48,7 +48,7 @@ Rather than define the term to refer directly to the limit, one might consider d
 
 
 <p>
-<small>Last revised 29 July 2020</small>
+<small>Last revised 30 July 2020</small>
 <p>
 <small>Copyright &copy; 2020 Kevin Cook</small>
 </body>
