Begin adding new biographical information

--- a/adventure.html
+++ b/adventure.html
@@ -305,10 +305,15 @@ I attempted to sell my patent to the company which had won what used to be my Ci
 <p>
 One morning during my prayer to begin the day I received the clear instruction: Go to BYU. I acted in faith and came to understand that the Lord wanted me to set my sights on a PhD, and consider the possibility of being a university professor. 
 
+<p>
+I found a friend in Deryle Lonsdale, a professor at BYU who was actively involved in computational linguistics research. He invited me to participate in his PSST (Pedagogical Software and Speech Technology) research group. I began attending meetings and trying to learn.
 
 <p>
-<small>Last revised 25 January 2020</small>
+I thought I might use what I learned to improve my reading by listening system. Perhaps I could figure out a way to automatically detect paragraph boundaries in speech, to break up speech into small segments, or ideas, which then could be listened to thoughtfully, one at a time. 
+
 <p>
-<small>Copyright &copy; 2020 Kevin Cook</small>
+<small>Last revised 25 December 2021</small>
+<p>
+<small>Copyright &copy; 2021 Kevin Cook</small>
 </body>
 </html> 
