--- a/adventure.html
+++ b/adventure.html
@@ -312,8 +312,18 @@ I found a friend in Deryle Lonsdale, a professor at BYU who was actively involve
 I thought I might use what I learned to improve my reading by listening system. Perhaps I could figure out a way to automatically detect paragraph boundaries in speech, to break up speech into small segments, or ideas, which then could be listened to thoughtfully, one at a time. 
 
 <p>
-<small>Last revised 25 December 2021</small>
+I searched the Harold B. Lee library and found a periodical named Computational Linguistics. I started skimming articles to try to get a feel for the field. Mostly, I understood very little. But, I did start to get interested in some ideas.
+
 <p>
-<small>Copyright &copy; 2021 Kevin Cook</small>
+Dr. Lonsdale introduced me to a professor in the computer science department who also was interested in computational linguistics, Eric Ringger. Dr. Ringger was very nice and invited me to sit in on his statistical natural language processing course. I was totally fascinated!  
+
+<p>
+After the end of the course, I asked if I could sit in on another. He let me know that I needed to enroll as a student. So, I applied to the Master's degree program in computer science, and miraculously was accepted. I was SO excited. I was embarking on a new career, belatedly but finally where I belonged.  
+
+
+<p>
+<small>Last revised 12 February 2022</small>
+<p>
+<small>Copyright &copy; 2022 Kevin Cook</small>
 </body>
 </html> 
