--- a/adventure.html
+++ b/adventure.html
@@ -312,7 +312,7 @@ I found a friend in Deryle Lonsdale, a professor at BYU who was actively involve
 I thought I might use what I learned to improve my reading by listening system. Perhaps I could figure out a way to automatically detect paragraph boundaries in speech, to break up speech into small segments, or ideas, which then could be listened to thoughtfully, one at a time. 
 
 <p>
-I searched the Harold B. Lee library and found a periodical named Computational Linguistics. I started skimming articles to try to get a feel for the field. Mostly, I understood very little. But, I did start to get interested in some ideas.
+I searched the Harold B. Lee library and found a periodical named Computational Linguistics. I started skimming articles to try to get a feel for the field. Mostly, I understood very little. But, I did start to get interested in some questions.
 
 <p>
 Dr. Lonsdale introduced me to a professor in the computer science department who also was interested in computational linguistics, Eric Ringger. Dr. Ringger was very nice and invited me to sit in on his statistical natural language processing course. I was totally fascinated!  
