More detail of events from the end of my work at Avocent to publishing a paper.

--- a/adventure.html
+++ b/adventure.html
@@ -291,19 +291,25 @@ After a long day of hard work, Mom would settle down and enjoy reading for herse
 My wife helped me to see that I needed to change the way I treated my oldest son. The Spirit of the Lord softened my heart and helped me humble myself sufficient to listen and understand the truth of what she said. 
 
 <p>
-With the completion of my work at Avocent came a career decision. I enjoyed my work there, but I was not excited about pursuing a similar type of work with some other company. I felt I needed to pay attention to my career, not just to getting another job.
+Things were going great! Then in November 2005, my company decided to close its newly acquired Utah location. With that closure came a career decision for me. I enjoyed my work there, but was not excited about relocating to Alabama or pursuing a similar type of work with some other company. I felt I needed to pay attention to my career, not just to getting another job.
 
 <p>
-I was inspired by the thought of people benefiting from the system for reading by listening which I had discovered. My Keypad Browser audio computer interface technology could help provide such a benefit. Up to this point in time, the technology was merely being used to provide efficient telephone access to movie showtimes. Its full potential had not yet been realized. 
+I was inspired by the thought of people benefiting from the system for reading by listening which I had discovered. My Keypad Browser audio computer interface technology could help provide such a benefit. Up to this point in time, the technology was merely being used to provide efficient telephone access to movie showtimes. Its full potential had not yet been realized. I thought perhaps it was possible to build a business on Keypad Browser technology. I attempted to put together a team and a business plan. I studied marketing and participated in the Utah Valley Entrepreneurial Forum.
 
 <p>
-I thought perhaps it was possible to build a business on Keypad Browser technology. I attempted to put together a team and a business plan, but nothing felt right. I learned that it was not practical for me to build a career by building a business. I needed a different career plan. 
+In August 2006, I received a church calling which included a speaking assignment in front of over a hundred people, almost every month. Oddly, I wasn't afraid to speak in front of so many people. However at first, I was almost incapable of preparing a coherent talk. I found it extremely difficult to decide what to say, and how to say it. I stayed up all night trying to prepare for my first speaking assignment, making almost no progress. I was fried going to the meeting, and totally unprepared. Lucky for the congregation, most of them were residents of a care center who had difficulty hearing or understanding what I said. 
 
 <p>
-I attempted to sell my patent to the company which had won what used to be my Cinemark business, but they were unconvinced.
+By January 2007, with the help of friends, I learned that it was not practical for me to build a career by building a business. I needed a different career plan. While out for a run, I had a strong spiritual impression that it was time for me to run as fast as I could, and that doing so involved serious risk.  
 
 <p>
-One morning during my prayer to begin the day I received the clear instruction: Go to BYU. I acted in faith and came to understand that the Lord wanted me to set my sights on a PhD, and consider the possibility of being a university professor. 
+I contacted TellMe, the company which had won what used to be my Cinemark business and told them about Keypad Browser technology, and how it might help them. Perhaps they would be interested in licensing my patent, or working with me in some way. 
+
+<p>
+I flew to California to pitch my ideas. That trip did not appear successful. Yet, it was another spiritual turning point in my life. I felt that God was especially close. I felt that He was interested in me, and in my concerns.
+
+<p>
+On the morning of March 1st 2007, during my prayer to begin the day I received the clear instruction: Go to BYU. I acted in faith and came to understand that the Lord wanted me to set my sights on a PhD, and consider the possibility of being a university professor. 
 
 <p>
 I found a friend in Deryle Lonsdale, a professor at BYU who was actively involved in computational linguistics research. He invited me to participate in his PSST (Pedagogical Software and Speech Technology) research group. I began attending meetings and trying to learn.
@@ -315,14 +321,34 @@ I thought I might use what I learned to improve my reading by listening system. 
 I searched the Harold B. Lee library and found a periodical named Computational Linguistics. I started skimming articles to try to get a feel for the field. Mostly, I understood very little. But, I did start to get interested in some questions.
 
 <p>
-Dr. Lonsdale introduced me to a professor in the computer science department who also was interested in computational linguistics, Eric Ringger. Dr. Ringger was very nice and invited me to sit in on his statistical natural language processing course. I was totally fascinated!  
+Dr. Lonsdale introduced me to a professor in the computer science department who also was interested in computational linguistics, Eric Ringger. Thanks to both of their kindness, I continued to learn and progress. 
 
 <p>
-After the end of the course, I asked if I could sit in on another. He let me know that I needed to enroll as a student. So, I applied to the Master's degree program in computer science, and miraculously was accepted. I was SO excited. I was embarking on a new career, belatedly but finally where I belonged.  
-
+Dr. Ringger invited me to sit in on his statistical natural language processing course. I was totally fascinated! After the end of the course, I asked if I could sit in on another. He let me know that I needed to enroll as a student. 
 
 <p>
-<small>Last revised 12 February 2022</small>
+So, I applied to the Master's degree program in computer science, and miraculously was accepted. I was SO excited. I was embarking on a new career, belatedly but finally where I belonged.  
+
+<p>
+I had participated in research groups with both Dr. Lonsdale and Dr. Ringger. Dr. Ringger's group was studying spoken language identification, automatically determining which of several common languages of the world is being spoken in recorded speech.
+
+<p>
+I decided to address the language identification problem for my Master's thesis. I became interested in understanding what was required to obtain an arbitrarily high correct classification rate. 
+
+<p>
+Upon entering the program in the Fall of 2008, I took a part-time job grading papers for another professor in the Computer Science department, Kevin Seppi. I thought it was pathetic that I was working for so little money, but I was grateful for the employment and for the opportunity to learn more about the work of education.
+
+<p>
+My first experience trying to publish was with Dr. Lonsdale and another member of the PSST research group, Jeremiah McGhee. We pursued the idea of predicting scores in oral language proficiency interviews, using scores from a fully automated sentence repetition test. People learning English were tested in both ways, in an oral interview, and using an automated system. The automated system played a recording of an English sentence, recorded the test-takers attempt to repeat the sentence, and then scored the attempt. The automated test was not nearly as comprehensive a test as the interview, but it was much less expensive. We found that we were able to use the automated test to predict interview scores, to some degree.
+
+<p>
+Our first attempt to publish was a last minute affair, staying up late into the night to write a first and final draft. Our results were promising, but I was not at all confident in my ability to write. That first submission was rejected. Among other reasons, we had not cited an important related work.
+
+<p>
+Over the following year and a half, two revisions of that first paper were submitted and subsequently rejected. Dr. Lonsdale had kind of given up on the paper. But in April 2011, two years after our original attempt, we succeeded! This success was a big confidence booster, for me. The experience helped me to learn about the whole process of researching a question of interest to others in a global conversation of ideas, designing and running experiments, analyzing results, and writing to contribute to the conversation. I learned a lot about writing. I learned to express myself so that others could understand what I wanted to communicate.     
+
+<p>
+<small>Last revised 9 March 2022</small>
 <p>
 <small>Copyright &copy; 2022 Kevin Cook</small>
 </body>
