--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <h2>Kevin M. B. Cook</h2>
    <img src="img/kevin.jpg">
 <p>
-Hi and welcome to my home page, which shares my view on learning and teaching. 
+Hi and welcome to my website, where I share a little about me. I hope you enjoy it!
+<p>
+Kevin
+
+<h3>Learning and teaching</h3>
 <p>
 I enjoy learning that which helps me to be a better person. I am trying to become a better person, less selfish, more understanding, happier, and more useful. Ultimately I am trying to become like the Savior Jesus Christ, our perfect exemplar. 
 <p>
@@ -37,26 +41,23 @@ When teachers persist in promoting confusion, wittingly or not, what should stud
 My faith teaches me that we all need the Spirit of God to help us see clearly, to enlighten our understanding. Reason alone is not sufficient, relying on respected members of society is not sufficient, and neither is following the crowd. 
 <p>
 Below is a link to the above mentioned article along with some of my other writings.  
-<p>
+
+<h3>Other articles</h3>
 <p><a href="point-nine-repeating.html">Does 0.999... equal one?</a>
 <p>A proof of the inconsistency of ZFC [<a href="doc/not-zfc.pdf">pdf</a>]
 <p>Probability of belonging to a language, <a href="http://scholarsarchive.byu.edu/etd/4023/">BYU 2013</a>
 <p>Intelligent cooperative control for urban tracking, <a href="http://link.springer.com/article/10.1007/s10846-013-9896-5">JINT 2014</a>
 <p>Elicited imitation for prediction of OPI test scores, <a href="http://dl.acm.org/citation.cfm?id=2043136">ACL 2011</a> 
+<p><a href="adventure.html"><p>The adventures of Kevin Cook</a>
 
-<p>
-<h3>Personal</h3>
-<a href="adventure.html"><p>The adventures of Kevin Cook</a>
-
-<p>
 <h3>Contact information</h3>
-My gmail address is kevincook13.
+My Gmail address is kevincook13.
 
 <p>
-<small>This page last revised 8 October 2019</small>
+<small>This page last revised 11 March 2022</small>
 
 <p>
-<small>Site last revised 9 March 2022</small>
+<small>Site last revised 11 March 2022</small>
 
 <p>
 <small>Copyright &copy; 2022 Kevin Cook</small>
