--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@ My faith teaches me that we all need the Spirit of God to help us see clearly, t
 Below is a link to the above mentioned article along with some of my other writings.  
 
 <h3>Other articles</h3>
-<p><a href="point-nine-repeating.html">Does 0.999... equal one?</a>
-<p>A proof of the inconsistency of ZFC [<a href="doc/not-zfc.pdf">pdf</a>]
-<p>Probability of belonging to a language, <a href="http://scholarsarchive.byu.edu/etd/4023/">BYU 2013</a>
-<p>Intelligent cooperative control for urban tracking, <a href="http://link.springer.com/article/10.1007/s10846-013-9896-5">JINT 2014</a>
-<p>Elicited imitation for prediction of OPI test scores, <a href="http://dl.acm.org/citation.cfm?id=2043136">ACL 2011</a> 
-<p><a href="adventure.html"><p>The adventures of Kevin Cook</a>
+<p><a href="point-nine-repeating.html">Does 0.999... equal one?</a></p>
+<p>A proof of the inconsistency of ZFC [<a href="doc/not-zfc.pdf">pdf</a>]</p>
+<p>Probability of belonging to a language, <a href="http://scholarsarchive.byu.edu/etd/4023/">BYU 2013</a></p>
+<p>Intelligent cooperative control for urban tracking, <a href="http://link.springer.com/article/10.1007/s10846-013-9896-5">JINT 2014</a></p>
+<p>Elicited imitation for prediction of OPI test scores, <a href="http://dl.acm.org/citation.cfm?id=2043136">ACL 2011</a></p> 
+<p><a href="adventure.html">The adventures of Kevin Cook</a></p>
 
 <h3>Contact information</h3>
 My Gmail address is kevincook13.
@@ -57,7 +57,7 @@ My Gmail address is kevincook13.
 <small>This page last revised 11 March 2022</small>
 
 <p>
-<small>Site last revised 11 March 2022</small>
+<small>Site last revised 18 May 2022</small>
 
 <p>
 <small>Copyright &copy; 2022 Kevin Cook</small>
